--- a/render.yaml
+++ b/render.yaml
@@ -21,6 +21,10 @@ services:
         sync: false
       - key: SUPABASE_SERVICE_ROLE_KEY
         sync: false
+      - key: SUPABASE_BUCKET
+        sync: false
+      - key: SUPABASE_PREFIX
+        value: scan-results
       - key: REDDIT_CLIENT_ID
         sync: false
       - key: REDDIT_CLIENT_SECRET
