Store run data in Supabase + weekly report + per-account cookie sync

--- a/.github/workflows/humanized_scan.yml
+++ b/.github/workflows/humanized_scan.yml
@@ -343,6 +343,15 @@ jobs:
         run: |
           python scripts/ops/upload_logs_supabase_db.py
 
+      - name: Upsert account health into Supabase DB
+        if: always() && steps.gate.outputs.should_run == 'true'
+        env:
+          PYTHONPATH: ${{ github.workspace }}/src:${{ github.workspace }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+        run: |
+          python scripts/ops/upload_account_health_supabase_db.py
+
       - name: Upload scan results
         if: always() && steps.gate.outputs.should_run == 'true'
         uses: actions/upload-artifact@v4
