--- a/.github/workflows/selenium_readonly_scan.yml
+++ b/.github/workflows/selenium_readonly_scan.yml
@@ -16,6 +16,10 @@ on:
         required: false
         default: ""
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   selenium_scan:
     runs-on: ubuntu-latest
