--- a/config/credentials.env.example
+++ b/config/credentials.env.example
@@ -61,3 +61,28 @@ OPENROUTER_API_KEY=
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENAI_HTTP_REFERER=http://localhost
 OPENAI_X_TITLE=Reddit_Bot
+
+# Observability (optional)
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=production
+SENTRY_RELEASE=
+SENTRY_TRACES_SAMPLE_RATE=0.0
+ENABLE_JSON_LOGGING=1
+METRICS_ENABLED=1
+METRICS_SNAPSHOT_INTERVAL_SEC=60
+
+# Log redaction (optional)
+LOG_REDACTION=1
+REDACT_URLS=1
+REDACT_USERNAMES=1
+
+# HTTP retry settings (optional)
+HTTP_RETRY_ATTEMPTS=3
+HTTP_RETRY_BASE_DELAY=0.5
+HTTP_RETRY_MAX_DELAY=5.0
+HTTP_RETRY_JITTER=0.2
+
+# State cleanup/rotation
+IDEMPOTENCY_MAX_ENTRIES=50000
+IDEMPOTENCY_MAX_AGE_DAYS=30
+SEEN_MAX_ENTRIES=50000
