--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,12 @@ services:
         value: Reddit_Bot
       - key: STREAMLIT_APP_PASSWORD
         sync: false
+      - key: SENTRY_DSN
+        sync: false
+      - key: SENTRY_ENVIRONMENT
+        value: production
+      - key: SENTRY_TRACES_SAMPLE_RATE
+        value: "0.0"
       - key: SUPABASE_URL
         sync: false
       - key: SUPABASE_SERVICE_ROLE_KEY
