--- a/.github/workflows/humanized_scan_account2.yml
+++ b/.github/workflows/humanized_scan_account2.yml
@@ -6,6 +6,10 @@ on:
     - cron: "0 23 * * *" # account2 (UK ~23:00)
   workflow_dispatch: {}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   humanized_scan:
     runs-on: ubuntu-latest
