--- a/.github/workflows/humanized_scan_account3.yml
+++ b/.github/workflows/humanized_scan_account3.yml
@@ -6,6 +6,10 @@ on:
     - cron: "0 22 * * *" # account3 (DE ~23:00)
   workflow_dispatch: {}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   humanized_scan:
     runs-on: ubuntu-latest
