--- a/.github/workflows/weekly_report.yml
+++ b/.github/workflows/weekly_report.yml
@@ -5,6 +5,10 @@ on:
     - cron: "0 13 * * 1" # Mondays 13:00 UTC
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   weekly-report:
     runs-on: ubuntu-latest
