--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reddit-bot"
-version = "0.0.0"
+version = "0.1.0"
 description = "Reddit automation and scanning tools"
 requires-python = ">=3.11"
+readme = "README.md"
+
+[project.scripts]
+reddit-bot = "apps.cli.cli:main"
 
 [tool.pytest.ini_options]
 pythonpath = ["src", "."]
