--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 # Core + API
 python-dotenv==1.0.0
+pydantic>=2.5.0
 praw==7.7.1
 prawcore==2.4.0
 
 # Selenium stack
 selenium==4.15.0
-webdriver-manager==4.0.1
 undetected-chromedriver==3.5.4
-chromedriver-binary==126.0.6478.62
 
 # Streamlit UI + HTTP
 streamlit>=1.37.0
@@ -19,8 +18,5 @@ httpx>=0.24.1
 
 # Utilities
 pytz>=2021.3
-scipy>=1.7.0
-numpy>=1.21.0
 schedule>=1.2.1
-
-pre-commit>=3.7.1
+sentry-sdk>=2.0.0
