--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ prawcore==2.4.0
 
 # Selenium stack
 selenium==4.15.0
+webdriver-manager==4.0.1
 undetected-chromedriver==3.5.4
 
 # Streamlit UI + HTTP
