--- a/.github/workflows/auto-moderation.yml
+++ b/.github/workflows/auto-moderation.yml
@@ -12,7 +12,7 @@ on:
         required: false
         default: "1"
   schedule:
-    - cron: "0 7 * * *"  # daily at 07:00 UTC
+    - cron: "0 9 * * *"  # daily at  1 AM US Pacific Time
 
 jobs:
   auto-setup:
